--- a/4.iris_config_rbac.md
+++ b/4.iris_config_rbac.md
@@ -1,3 +1,14 @@
+# Đọc rule từ file YAML
+
+I want to read authorization rules from configuration file not hard coding. Please revise this block of code
+rules := []Rule{
+{Path: "/api/book", Method: "GET", Auth: Allow("roleA", "roleB")},
+{Path: "/api/book", Method: "POST", Auth: Deny("roleB", "roleC")},
+{Path: "/api/person", Method: "GET", Auth: AllowAll()},
+{Path: "/api/person", Method: "DELETE", Auth: DenyAll()},
+}
+
+------------
 Certainly! I'll show you how to read the authorization rules from a configuration file instead of hard-coding them. We'll use YAML for the configuration file, as it's human-readable and widely used for configuration. We'll use the `gopkg.in/yaml.v3` package to parse the YAML file.
 
 First, let's create a YAML configuration file named `rbac_rules.yaml`:
