--- a/5.rbac_txt_iris.md
+++ b/5.rbac_txt_iris.md
@@ -1,3 +1,9 @@
+Can you improve code so it can read the plain configure file with following format. Each parameter are separated by a comma
+/api/book, GET, Allow, [roleA, roleB]
+/api/book, POST, Deny, [roleB, roleC]
+/api/person,GET,AllowAll
+/api./person,DELETE,DenyAll
+-------------
 Certainly! I'll modify the code to read a plain text configuration file with the format you specified. Each line in the file represents a rule, with parameters separated by commas. Here's the improved version of the code:
 
 First, let's create a configuration file named `rbac_rules.txt` with the following content:
